@@ -3,13 +3,16 @@ package org.service.hotel.service;
 import lombok.RequiredArgsConstructor;
 import org.service.hotel.dto.RoomAvailabilityRequest;
 import org.service.hotel.entity.Room;
+import org.service.hotel.entity.RoomBooking;
 import org.service.hotel.exception.RoomNotAvailableException;
+import org.service.hotel.repository.RoomBookingRepository;
 import org.service.hotel.repository.RoomRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,6 +21,7 @@ public class RoomService {
 
     private final RoomRepository roomRepository;
     private final HotelService hotelService;
+    private final RoomBookingRepository roomBookingRepository;
 
     public List<Room> getAllRooms() {
         return roomRepository.findAll();
@@ -98,15 +102,43 @@ public class RoomService {
     }
 
     /**
-     * Проверяет доступность номера на указанные даты
-     * В реальной системе здесь была бы проверка в таблице бронирований
+     * Подтверждает бронирование (PENDING → CONFIRMED)
      */
-    private boolean isRoomAvailableForDates(Long roomId, LocalDate startDate, LocalDate endDate) {
-        // Временная реализация - всегда возвращает true
-        // В реальном приложении здесь была бы проверка:
-        // - нет ли подтвержденных бронирований на эти даты
-        // - нет ли временных блокировок
+    public RoomBooking confirmBooking(Long bookingId) {
+        RoomBooking booking = roomBookingRepository.findById(bookingId)
+                .orElseThrow(() -> new RuntimeException("Booking not found"));
 
+        if (booking.getStatus() != RoomBooking.BookingStatus.PENDING) {
+            throw new RuntimeException("Booking is not in PENDING status");
+        }
+
+        // Проверяем что номер все еще доступен
+        if (!isRoomAvailableForDates(booking.getRoomId(), booking.getStartDate(), booking.getEndDate())) {
+            throw new RoomNotAvailableException("Room is no longer available for the requested dates");
+        }
+
+        booking.setStatus(RoomBooking.BookingStatus.CONFIRMED);
+
+        // Увеличиваем счетчик бронирований комнаты
+        Room room = getRoomById(booking.getRoomId());
+        room.setTimesBooked(room.getTimesBooked() + 1);
+        roomRepository.save(room);
+
+        return roomBookingRepository.save(booking);
+    }
+
+    /**
+     * Отменяет бронирование
+     */
+    public RoomBooking cancelBooking(Long bookingId) {
+        RoomBooking booking = roomBookingRepository.findById(bookingId)
+                .orElseThrow(() -> new RuntimeException("Booking not found"));
+
+        booking.setStatus(RoomBooking.BookingStatus.CANCELLED);
+        return roomBookingRepository.save(booking);
+    }
+
+    public boolean isRoomAvailableForDates(Long roomId, LocalDate startDate, LocalDate endDate) {
         // Валидация дат
         if (startDate == null || endDate == null) {
             throw new IllegalArgumentException("Start date and end date cannot be null");
@@ -120,20 +152,62 @@ public class RoomService {
             throw new IllegalArgumentException("Start date cannot be in the past");
         }
 
-        // TODO: Реальная проверка доступности дат
-        // return !bookingRepository.existsByRoomIdAndDatesOverlap(roomId, startDate, endDate);
+        // Проверяем что комната существует
+        Room room = roomRepository.findById(roomId)
+                .orElseThrow(() -> new RuntimeException("Room not found with id: " + roomId));
 
-        return true; // Временная заглушка
+        // Проверяем доступность комнаты (используем Boolean available)
+        if (!room.getAvailable()) { // или room.getAvailable() != null && room.getAvailable()
+            return false;
+        }
+
+        // Реальная проверка: нет ли подтвержденных бронирований на эти даты
+        return !roomBookingRepository.existsConfirmedBookingForRoomInDateRange(roomId, startDate, endDate);
+    }
+
+    /**
+     * Создает временную бронь (PENDING статус)
+     */
+    public RoomBooking createTemporaryBooking(Long roomId, LocalDate startDate, LocalDate endDate, String correlationId) {
+        Room room = getRoomById(roomId);
+
+        if (!isRoomAvailableForDates(roomId, startDate, endDate)) {
+            throw new RoomNotAvailableException(
+                    String.format("Room %d is not available for dates %s to %s", roomId, startDate, endDate)
+            );
+        }
+
+        RoomBooking temporaryBooking = RoomBooking.builder()
+                .roomId(roomId)
+                .startDate(startDate)
+                .endDate(endDate)
+                .status(RoomBooking.BookingStatus.PENDING)
+                .correlationId(correlationId)
+                .build();
+
+        return roomBookingRepository.save(temporaryBooking);
+    }
+
+    /**
+     * Отменяет бронирование по correlationId
+     */
+    public void cancelBookingByCorrelationId(String correlationId) {
+        roomBookingRepository.findAll().stream()
+                .filter(booking -> correlationId.equals(booking.getCorrelationId()))
+                .filter(booking -> booking.getStatus() == RoomBooking.BookingStatus.PENDING)
+                .forEach(booking -> {
+                    booking.setStatus(RoomBooking.BookingStatus.CANCELLED);
+                    roomBookingRepository.save(booking);
+                });
     }
 
     /**
      * Получает доступные номера для указанных дат
      */
     public List<Room> getAvailableRoomsForDates(LocalDate startDate, LocalDate endDate) {
-        // В реальной системе здесь была бы сложная логика проверки доступности
         return roomRepository.findByAvailableTrue().stream()
                 .filter(room -> isRoomAvailableForDates(room.getId(), startDate, endDate))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
@@ -150,6 +224,6 @@ public class RoomService {
                     // При равенстве - по ID
                     return Long.compare(r1.getId(), r2.getId());
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 }
